Fix bug where URL text was spilling out of container.

--- a/image_share.css
+++ b/image_share.css
@@ -9,5 +9,8 @@ body {
   max-height:200px;
 }
 p {
-  max-width: 90%;
+  max-width: 95%;
+}
+.break-text{
+  word-wrap: break-word;
 }
